--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,19 @@
             <version>${jstl.version}</version>
         </dependency>
 
+        <!--REngine Java Interface to R -->
+        <dependency>
+            <groupId>org.rosuda.REngine</groupId>
+            <artifactId>REngine</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rosuda.REngine</groupId>
+            <artifactId>Rserve</artifactId>
+            <version>1.8.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
