数据库备份还原

--- a/src/main/resource/jdbc.properties
+++ b/src/main/resource/jdbc.properties
@@ -1,18 +1,18 @@
 #localhost
 jdbc.host=127.0.0.1
-#要导出的数据库名称
-jdbc.exportDatabaseName=root
-#数据库密码
-jdbc.password=123456
-#要导入的数据库所在路径
-jdbc.importPath=/Users/sz/Desktop/students.sql
 #端口号
 jdbc.port=3306
+#用户名
+jdbc.username=root
+#数据库密码
+jdbc.password=123456
+#要导出的数据库名称
+jdbc.exportDatabaseName=test_db
+#要导入的数据库所在路径
+jdbc.importPath=/Users/zsm/Desktop/students.sql
 #mysql下的bin文件的路径
 MysqlPath=/usr/local/mysql/bin/
 #导出的数据库存放路径
-jdbc.exportPath=/Users/sz/Desktop/students.sql
-#用户名
-jdbc.username=root
+jdbc.exportPath=/Users/zsm/Desktop/students.sql
 #要导入的目标数据库
 jdbc.importDatabaseName=DesignModel
