添加Bin-log日志读取

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
         <junit.version>4.12</junit.version>
         <maven.plugins.version>2.17</maven.plugins.version>
         <httpclient.version>4.5.3</httpclient.version>
-        <slf4j-api.version>1.8.0-beta0</slf4j-api.version>
         <servlet-api.version>4.0.0</servlet-api.version>
         <jstl.version>1.2</jstl.version>
         <!--JSONObject-->
@@ -98,12 +97,6 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
             <version>${commons-collections.version}</version>
-        </dependency>
-        <!-- 日志处理log -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-api.version}</version>
         </dependency>
         <!-- servlet api -->
         <dependency>
@@ -216,6 +209,7 @@
                     <include>**/*.xml</include>
                     <include>**/*.cof</include>
                     <include>**/*.properties</include>
+                    <include>**/*.*</include>
                 </includes>
                 <excludes>
                     <exclude>**/*.jar</exclude>
