添加gitignore，日志打印目录

--- a/src/main/resource/log4j.properties
+++ b/src/main/resource/log4j.properties
@@ -21,7 +21,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #文件路径输出
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 #默认输出到tomcat的根路径或者运行测试工程的根路径
-log4j.appender.logfile.File=/opt/rh/log.log
+log4j.appender.logfile.File=./logs/log.log
 log4j.appender.logfile.MaxFileSize=10240KB
 log4j.appender.logfile.Encoding = UTF-8
 # Keep three backup files.
