Added FastDFSClient code, and optimized StringUtils code.

--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,17 @@
             <version>1.27.0.0</version>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.23</version>
+        </dependency>
+        <!--FastDFSjar包需要手动添加 https://download.csdn.net/download/z645817/10569189 -->
+        <dependency>
+            <groupId>org.csource</groupId>
+            <artifactId>fastdfs-client-java</artifactId>
+            <version>1.27</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>5.0.1.RELEASE</version>
