Optimize the log4j.properties configuration.

--- a/src/main/resource/log4j.properties
+++ b/src/main/resource/log4j.properties
@@ -17,13 +17,12 @@ log4j.category.org.apache=INFO
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-
 #文件路径输出
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
 #默认输出到tomcat的根路径或者运行测试工程的根路径
 log4j.appender.logfile.File=./logs/log.log
 log4j.appender.logfile.MaxFileSize=10240KB
-log4j.appender.logfile.Encoding = UTF-8
+log4j.appender.logfile.Encoding=UTF-8
 # Keep three backup files.
 log4j.appender.logfile.MaxBackupIndex=5
 # Pattern to output: date priority [category] - message
@@ -41,3 +40,11 @@ log4j.logger.com.mybatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
 log4j.logger.java.sql.Connection=DEBUG  
 log4j.logger.java.sql.Statement=DEBUG  
 log4j.logger.java.sql.PreparedStatement=DEBUG
+#自定义com.zsm.commonexample.algorithm目录日志输出配置
+log4j.logger.com.zsm.commonexample.algorithm=INFO,processor
+log4j.appender.processor=org.apache.log4j.FileAppender
+log4j.appender.processor.File=./logs/processor.log
+log4j.appender.processor.File.MaxFileSize=10120KB
+log4j.appender.processor.File.Encoding=UTF-8 
+log4j.appender.processor.layout=org.apache.log4j.PatternLayout
+log4j.appender.processor.layout.ConversionPattern=%d %p [%c] - %m%n
