--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,11 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
 
     </dependencies>
 
