--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>Common Examples</name>
+    <name>common examples</name>
     <groupId>com.zsm.demo</groupId>
-    <artifactId>CommonExamples</artifactId>
+    <artifactId>commonexamples</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
